<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory app:title="@string/language_header">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="custom_language_switch"
            app:title="@string/custom_language" />

        <DropDownPreference
            android:summary="@string/drop_down_custom_language_summary"
            app:dependency="custom_language_switch"
            app:isPreferenceVisible="false"
            app:key="custom_language"
            app:title="@string/drop_down_custom_language_title" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@string/unit_header">
        <ListPreference
            android:summary="@string/check_box_unit_summary"
            app:key="custom_unit"
            app:title="@string/check_box_unit_title" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>