<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activity"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/sample_back_squat" />

    <LinearLayout
        android:id="@+id/dateTimePanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timePicker"
            style="@style/DateTimeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            tools:text="9:30 PM" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccentLight" />

        <TextView
            android:id="@+id/datePicker"
            style="@style/DateTimeStyle"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            tools:text="Sun, Oct 18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccentLight" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:colorControlNormal" />

        <TextView
            android:id="@+id/result_text"
            style="@style/ActivityResultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            tools:text="10kg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:colorControlNormal" />

        <!-- Is this SeekBar really needed?  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/abc_difficulty" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:max="4"
                android:tickMark="@drawable/tick_mark" />

        </LinearLayout>

        <com.phrase.android.wx.widget.CustomKeyboardView
            android:id="@+id/keyboard_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/button_negative"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/abc_cancel" />

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/button_positive"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/abc_save" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>